<resources>
    <string name="app_name">Labs</string>
    <string name="btnGoAct1">Atividade 2</string>
    <string name="btnGoAct2">Atividade 1</string>
    <string name="txtAct1">Estou na Atividade 1</string>
    <string name="txtAct2">Estou na Atividade 2</string>
    <string name="txtStudentInfo">Diogo Assunção nº 28257</string>
    <string name="txtStudentInfoTitle">Informação</string>
    <string name="txtWelcome">Olá</string>
    <string name="add_title">Adicione Nota</string>
    <string name="add_done">Concluir</string>
    <string name="add_cancel">Cancelar</string>
    <string name="update_change">Alterar</string>
    <string name="update_remove">Remover</string>
    <string name="update_title">Atualizar Nota</string>
    <string name="act1_go_crud">Ir para CRUD</string>
    <string name="list_fr_content_description">Notas</string>
    <string name="list_row_title">Nota</string>
    <string name="hello_blank_fragment">Olá Fragmento</string>
    <string name="note_created_at">criado em:</string>
    <string name="time_minutes">minutos</string>
    <string name="time_hours">horas</string>
    <string name="time_phrase">Modificado à:</string>
    <string name="time_ago">Passados</string>
    <string name="should_add_note">Deverá colocar conteúdo na nota</string>
    <string name="added">Gravado com sucesso!</string>
    <string name="is_not_possible_to_update">Não é possível atualizar a nota sem conteúdo</string>
    <string name="updated">Nota atualizada com sucesso!</string>
    <string name="yes">Sim</string>
    <string name="rm_with_sucess">Nota removida com sucesso!</string>
    <string name="sure_to_remove_note">Tem a certeza que pretende remover a Nota?</string>
    <string name="no">Não</string>
    <string name="remove">Remover</string>
    <string name="list_fr_no_note">Não existem notas</string>
    <string name="note_min_length">A nota tem que ter pelo menos 5 caracteres\n</string>
</resources>